--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
+#encontrados
+*.txt.user
+*.txt.user.ed884d0
 
 *~
 *.autosave
@@ -26,6 +29,7 @@ tags
 Makefile*
 *.prl
 *.app
+
 moc_*.cpp
 ui_*.h
 qrc_*.cpp
